# imxrt1060evk-bsp

./: .gitignore  Cargo.toml  EXAMPLES.md  README.md  build.rs  jlink.gdb  memory.x
.cargo/: config
examples/: Cargo.toml  README.md  jlink.gdb  jlink_gdb.sh  led.rs  openocd.cfg  openocd.gdb  pit.objdump  pit.rs
examples/.cargo/: config
examples/src/: i2c.rs  led.rs  led_blinky.rs  pit.rs  pwm.rs  spi.rs  systick.rs  timer.rs  uart.rs
imxrt1060evk-pins/: Cargo.toml
imxrt1060evk-pins/src/: lib.rs
src/: lib.rs  systick.rs
