[package]
name = "imxrt1060evk-bsp"
version = "0.3.0"
authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imxrt-rt/imxrt1060evk-bsp"
description = """
Rust-based BSP for NXP's MIMXRT1060-EVK.
Part of the imxrt-rs project.
"""

[dependencies]
cortex-m = "0.7"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true
features = ["device"]

[dependencies.panic-halt]
version = "0.2"
optional = true

[dependencies.imxrt-hal]
version = "0.4.2"
features = ["imxrt1062"]

# Only need logging when "usb-logging" is enabled
[dependencies.log]
version = "0.4.8"
optional = true

[dependencies.imxrt1060evk-pins]
version = "0.1"
path = "imxrt1060evk-pins"

[dev-dependencies]
cortex-m-rtic = "1.0"
dwt-systick-monotonic = "1.0"
embedded-hal = "0.2"
heapless = "0.7"
imxrt-uart-log = "0.2"
log = "0.4"
nb = "0.1"

[build-dependencies]
imxrt-boot-gen = { version = "0.1.0", features = ["imxrt1062"] }

[workspace]
members = [
    "imxrt1060evk-pins",
]

[features]
# Default features established for prototype development
default = []
# Provides the `Peripherals::steal` constructor required by `rtic`.
rtic = ["imxrt-hal/rtic"]
# Enables cortex-m-rt runtime support
rt = ["cortex-m-rt", "imxrt-hal/rt", "panic-halt"]

# Most documentation tells the user to favor release builds.
# However, it might be nice to disable optimizations when evaluating
# programs. These settings let us remove '--release' from documented
# commands and still have a successful build.
[profile.dev]
lto = "thin"

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "thumbv7em-none-eabihf"

[lib]
bench = false
test = false

##########
# EXAMPLES
##########

# Examples that just need a runtime

[[example]]
name = "led"
required-features = ["rt"]
