[package]
name = "imxrt1060evk-examples"
version = "0.1.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.3"
log = { version = "0.4.8", features = ["release_max_level_info"] }
nb = "0.1.2"
panic-halt = "0.2.0"

imxrt1060evk-bsp = { version = "0.1.0", path = ".." }

[[bin]]
name = "led_blinky"
path = "src/led_blinky.rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
