[package]
name = "imxrt1060evk-examples"
version = "0.1.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-semihosting = {version = "0.3.5", features = ["jlink-quirks"] }
embedded-hal = "0.2.3"
log = { version = "0.4.8", features = ["release_max_level_info"] }
nb = "0.1.2"
panic-semihosting = "0.5.3"
imxrt1060evk-bsp = { version = "0.1.0", path = ".." }

[[bin]]
name = "led"
path = "src/led.rs"
test = false
bench = false

[[bin]]
name = "pit"
path = "src/pit.rs"
test = false
bench = false

[[bin]]
name = "timer"
path = "src/timer.rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
