[package]
name = "imxrt1060evk-examples"
version = "0.2.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
embedded-hal = "0.2.3"
log = { version = "0.4.8", features = ["release_max_level_info"] }
nb = "0.1.2"
panic-halt = "0.2.0"
imxrt1060evk-bsp = { version = "0.2.0", path = ".." }

[[bin]]
name = "i2c"
path = "src/i2c.rs"
test = false
bench = false

[[bin]]
name = "led"
path = "src/led.rs"
test = false
bench = false

[[bin]]
name = "pit"
path = "src/pit.rs"
test = false
bench = false

[[bin]]
name = "pwm"
path = "src/pwm.rs"
test = false
bench = false

[[bin]]
name = "spi"
path = "src/spi.rs"
test = false
bench = false

[[bin]]
name = "systick"
path = "src/systick.rs"
test = false
bench = false

[[bin]]
name = "timer"
path = "src/timer.rs"
test = false
bench = false

[[bin]]
name = "uart"
path = "src/uart.rs"
test = false
bench = false


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
